SF-2218 Fix audio player convering scripture scrollbar

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -77,6 +77,8 @@
       }
       .panel-content {
         height: 100%;
+        display: flex;
+        flex-direction: column-reverse;
       }
       .panel-nav {
         display: flex;
@@ -166,10 +168,6 @@
 }
 
 .scripture-audio-player-wrapper {
-  position: absolute;
-  bottom: 0;
   background: #e8eae6;
-  width: 100%;
-  z-index: 1;
   padding: 0.25rem;
 }
